Fixing the fake loading position on mobile

--- a/styles/_fake-loading.scss
+++ b/styles/_fake-loading.scss
@@ -90,18 +90,3 @@
     visibility: hidden;
   }
 }
-
-@media (max-width: 768px) {
-  .loading-bar-wrapper {
-    position: absolute;
-    top: 50%;
-    left: 15%;
-  }
-
-  .loading-bar {
-    width: 250px;
-  }
-  .loading-bar-name {
-    left: 60px;
-  }
-}
